--- a/src/header/HeaderStyles.css
+++ b/src/header/HeaderStyles.css
@@ -2,9 +2,13 @@
 div.row.justify-content-center{
     margin: 0;
     height: 50px;
-    color: white;
+    /* color: white; */
     display: flexbox;
     align-items: center;
     text-align: center !important;
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
+    font-family: 'Lobster two', cursive;
+ }
+ .justify-content-center h1{
+    font-size: 50px;
  }
